Add new tasks button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.6.96/css/materialdesignicons.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <body>
         <div class="display">
             <div class="top">
@@ -98,6 +99,11 @@
                             <label style="font-weight: lighter;">Go exercise</label>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="new-tasks">
+                <div class="button">
+                    <i class="icon mdi mdi-plus"></i>
                 </div>
             </div>
         </div>
