Organize main.css files

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="new-tasks">
+            <div class="add-tasks">
                 <div class="button">
                     <i class="icon mdi mdi-plus"></i>
                 </div>
